<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Module 01 Fundamentals</string>
    <string name="label_price">Original price</string>
    <string name="label_discount">Discount percent (0-100)</string>
    <string name="button_compute">Compute Discounted Price</string>
    <string name="hint_price">e.g. 100.00</string>
    <string name="hint_discount">e.g. 25</string>
    <string name="error_empty_field">Field cannot be empty</string>
    <string name="error_invalid_number">Enter a valid number</string>
    <string name="error_discount_range">Discount must be between 0 and 100</string>
</resources>
